# programmer-voice-input

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  dev.cmd  index.html  package-lock.json  package.json  start.cmd  start.vbs
.github/workflows/: release.yml
docs/: RELEASE.md
scripts/: clear-local-secrets.ps1  start-dev.ps1
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  floating.json
src-tauri/src/: commands.rs  keyboard_hook.rs  main.rs  paste.rs  realtime_asr.rs  shortcuts.rs  tray.rs
src/components/: FloatingWindow.tsx  SettingsPage.tsx  StatusBadge.tsx
src/services/: diagnostics.ts  history.ts  http.ts  logs.ts  paste.ts  polish.ts  realtimeRecorder.ts  settings.ts  transcriptCleanup.ts
src/types/: settings.ts  transcription.ts
