[package]
name = "voice"
version = "0.1.0"
description = "A lightweight programmer voice input HUD."
authors = ["voice contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
